<resources>
    <string name="app_name">LoginSignupExample</string>
    <string name="logo">Logo</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? Signup</string>
    <string name="signup">Signup</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="terms_and_conditions">Terms and Conditions</string>

    <string-array name="nationality">
        <item>Nepali</item>
        <item>Indian</item>
    </string-array>

</resources>